  TermAndBoost class now holds a BytesRef rather than a Term. (Alan Woodward)

* GITHUB#11961: VectorValues#EMPTY was removed as this instance was not
  necessary and also illegal as it reported a number of dimensions equal to
  zero. (Adrien Grand)

* GITHUB#11962: VectorValues#cost() now delegates to VectorValues#size().
  (Adrien Grand)
  
* GITHUB#11984: Improved TimeLimitBulkScorer to check the timeout at exponantial rate.
  (Costin Leau)


New Features
---------------------
* GITHUB#11795: Add ByteWritesTrackingDirectoryWrapper to expose metrics for bytes merged, flushed, and overall
  write amplification factor. (Marc D'Mello)

* GITHUB#11929: MMapDirectory gives more granular control on which files to
  preload. (Adrien Grand, Uwe Schindler)

* GITHUB#11999: MemoryIndex now supports stored fields. (Alan Woodward)

Improvements
---------------------
* GITHUB#11778: Detailed part-of-speech information for particle(조사) and ending(어미) on Nori
  is now tagged. (Namgyu Kim)

* GITHUB#11785: Improve Tessellator performance by delaying calls to the method
  #isIntersectingPolygon (Ignacio Vera)

* GITHUB#687: speed up IndexSortSortedNumericDocValuesRangeQuery#BoundedDocIdSetIterator
  construction using bkd binary search. (Jianping Weng)

* GITHUB#11985: ExitableTerms to override Terms#getMin and Terms#getMax in order to avoid
  iterating through the terms when the wrapped implementation caches such values. (Luca Cavanna)

* GITHUB#11860: Improve storage efficiency of connections in the HNSW graph that Lucene uses for
  vector search. (Ben Trent)

* GITHUB#12008: Clean up LongRange#verifyAndEncode logic to remove unnecessary NaN checks. (Greg Miller)

* GITHUB#12003: Minor cleanup/improvements to IndexSortSortedNumericDocValuesRangeQuery. (Greg Miller)

Bug Fixes
---------------------
* GITHUB#11726: Indexing term vectors on large documents could fail due to
  trying to apply a dictionary whose size is greater than the maximum supported